// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debounceHandler display name should not wrap display name in production env 1`] = `
<DebounceHandler>
  <Target
    test={[Function]}
  />
</DebounceHandler>
`;

exports[`debounceHandler display name should wrap display name in non-production env 1`] = `
<debounceHandler(Target)>
  <Target
    test={[Function]}
  />
</debounceHandler(Target)>
`;

exports[`debounceHandler should call \`e.persist()\` if it has been passed 1`] = `
Array [
  Array [
    Object {
      "persist": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
  ],
]
`;

exports[`debounceHandler should call \`e.persist()\` if it has been passed 2`] = `
Array [
  Array [],
]
`;

exports[`debounceHandler should call actual handler during lifecycle 1`] = `Array []`;

exports[`debounceHandler should call actual handler during lifecycle 2`] = `
Array [
  Array [
    undefined,
  ],
]
`;

exports[`debounceHandler should pass \`delay\` option to \`just-debounce-it\` 1`] = `
Array [
  Array [
    [Function],
    75,
    undefined,
  ],
]
`;

exports[`debounceHandler should pass \`delay\` option to \`just-debounce-it\` via props 1`] = `
Array [
  Array [
    [Function],
    75,
    undefined,
  ],
]
`;

exports[`debounceHandler should pass \`leadingCall\` option to \`just-debounce-it\` 1`] = `
Array [
  Array [
    [Function],
    75,
    true,
  ],
]
`;

exports[`debounceHandler should pass handler arguments through 1`] = `
Array [
  Array [
    undefined,
  ],
]
`;
